custom dice faces using decals

--- a/src/app/components/scene-graph/scene-graph.html
+++ b/src/app/components/scene-graph/scene-graph.html
@@ -36,7 +36,8 @@
         </ngt-object3D>
 
          @for (dice of dices(); track $index) {
-            <app-dice />
+            <!-- <app-dice /> -->
+             <app-d6-dice />
          }
 
         <ngts-contact-shadows [options]="{
